[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scenes/Game/Player/Hud.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/level1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tilesets/GeneralTileset.tres" type="TileSet" id=3]

[node name="Node2D" type="Control"]

process/pause_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="HUD" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 11.0
margin/right = 221.0
margin/bottom = 80.0

[node name="Name" type="Sprite" parent="HUD"]

transform/pos = Vector2( 35.1671, 34.9573 )
transform/scale = Vector2( 0.196045, 0.196045 )
texture = ExtResource( 2 )

[node name="HPOutline" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 8.0
margin/right = 205.0
margin/bottom = 31.0
color = Color( 0.277344, 0.277344, 0.277344, 1 )

[node name="HPActual" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 8.0
margin/right = 205.0
margin/bottom = 31.0
color = Color( 0.753906, 0, 0, 1 )

[node name="HPLabel" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 12.0
margin/right = 157.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MPOutline" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 39.0
margin/right = 205.0
margin/bottom = 62.0
color = Color( 0.277344, 0.277344, 0.277344, 1 )

[node name="MPActual" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 39.0
margin/right = 205.0
margin/bottom = 62.0
color = Color( 0, 0, 1, 1 )

[node name="MPLabel" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 43.0
margin/right = 157.0
margin/bottom = 57.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Consumable" type="Sprite" parent="HUD"]

transform/pos = Vector2( 1.09439, 76.3854 )
transform/scale = Vector2( 35.9841, 34.6689 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -70.0
margin/top = 20.0
margin/right = -18.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="ButtonAdd" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -70.0
margin/top = 57.0
margin/right = -18.0
margin/bottom = 77.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Character" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -4.0
margin/right = 1285.0
margin/bottom = 726.0

[node name="CharLabel" type="Label" parent="Character"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 16.0
margin/right = 668.0
margin/bottom = 30.0
text = "Character"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Inventory" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -4.0
margin/right = 1284.0
margin/bottom = 725.0

[node name="InvLabel" type="Label" parent="Inventory"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 14.0
margin/right = 669.0
margin/bottom = 28.0
text = "Inventory"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Map" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = -4.0
margin/right = 1283.0
margin/bottom = 723.0

[node name="TilePanel" type="Panel" parent="Map"]

editor/display_folded = true
visibility/self_opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.5
margin/top = 64.5
margin/right = -21.5
margin/bottom = 8.5

[node name="TileMap" type="TileMap" parent="Map/TilePanel"]

transform/scale = Vector2( 0.2, 0.2 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 64
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="MapLArrow" type="Label" parent="Map"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 49.0
margin/top = 696.0
margin/right = 60.0
margin/bottom = 710.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapUArrow" type="Label" parent="Map"]

rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 46.0
margin/top = 686.0
margin/right = 57.0
margin/bottom = 700.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapRArrow" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 56.0
margin/top = 683.0
margin/right = 67.0
margin/bottom = 697.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapDArrow" type="Label" parent="Map"]

rect/rotation = 270.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 693.0
margin/right = 70.0
margin/bottom = 707.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapRText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 683.0
margin/right = 112.0
margin/bottom = 697.0
text = "right"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapLText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 683.0
margin/right = 41.0
margin/bottom = 697.0
text = "left"
align = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapUText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 33.0
margin/top = 661.0
margin/right = 72.0
margin/bottom = 675.0
text = "up"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapDText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 702.0
margin/right = 76.0
margin/bottom = 716.0
text = "down"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapZText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 158.0
margin/top = 683.0
margin/right = 212.0
margin/bottom = 697.0
text = "space"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapZ" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 683.0
margin/right = 158.0
margin/bottom = 697.0
text = "zoom:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapLabel" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 628.0
margin/top = 13.0
margin/right = 688.0
margin/bottom = 27.0
text = "Map"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Pause" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -567.0
margin/top = -214.0
margin/right = -779.0
margin/bottom = -454.0

[node name="PauseLabel" type="Label" parent="Pause"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 3.0
margin/right = 145.0
margin/bottom = 17.0
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Btn_resume" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_quit_desktop")
focus_neighbour/bottom = NodePath("../Btn_options")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 52.0
margin/top = 35.0
margin/right = 155.0
margin/bottom = 71.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_resume"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 36.0
text = "Resume"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_options" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_resume")
focus_neighbour/bottom = NodePath("../Btn_quit_menu")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 83.0
margin/right = 155.0
margin/bottom = 119.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_quit_menu" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_options")
focus_neighbour/bottom = NodePath("../Btn_quit_desktop")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 132.0
margin/right = 155.0
margin/bottom = 168.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_quit_menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Quit to menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_quit_desktop" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_quit_menu")
focus_neighbour/bottom = NodePath("../Btn_resume")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 180.0
margin/right = 155.0
margin/bottom = 216.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_quit_desktop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Quit to Desktop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="GameOver" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -5.0
margin/top = -4.0
margin/right = 1285.0
margin/bottom = 724.0

[node name="FadePanel" type="Panel" parent="GameOver"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1288.0
margin/bottom = 728.0

[node name="GameOverLabel" type="RichTextLabel" parent="GameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 613.0
margin/top = 306.0
margin/right = 692.0
margin/bottom = 323.0
bbcode/enabled = false
bbcode/bbcode = "Game Over"
visible_characters = -1

[node name="Btn_Retry" type="Button" parent="GameOver"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 335.0
margin/right = 639.0
margin/bottom = 371.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="GameOver/Btn_Retry"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 36.0
text = "Retry"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_Quit" type="Button" parent="GameOver"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 667.0
margin/top = 336.0
margin/right = 766.0
margin/bottom = 372.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="GameOver/Btn_Quit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 36.0
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="ButtonAdd" to="." method="_on_ButtonAdd_pressed"]

[connection signal="pressed" from="Pause/Btn_resume" to="." method="_on_Btn_resume_pressed"]

[connection signal="pressed" from="Pause/Btn_options" to="." method="_on_Btn_options_pressed"]

[connection signal="pressed" from="Pause/Btn_quit_menu" to="." method="_on_Btn_quit_menu_pressed"]

[connection signal="pressed" from="Pause/Btn_quit_desktop" to="." method="_on_Btn_quit_desktop_pressed"]

[connection signal="pressed" from="GameOver/Btn_Retry" to="." method="_on_Btn_Retry_pressed"]

[connection signal="pressed" from="GameOver/Btn_Quit" to="." method="_on_Btn_Quit_pressed"]


